# Godspeed-Robotics

./: .gitignore  .gitmodules  README.md  speech_to_text.py
Eye Mechanism/: speech_to_text.py  speech_to_text_dev.ipynb
archieve/: speech_to_text.py  speech_to_text_dev.ipynb
archieve/response_generate/: main.cpp
archieve/speech_to_text/: personal_stream.cpp
archieve/vosk/: personal_assistant.py  response_generator.py
eye_mechanism/: CMakeLists.txt  README.md  backup.cpp  personal_assistant.py  servo_motion.cpp  voice_assistant.cpp
eye_mechanism/modules/openAI_response/: CMakeLists.txt  response_generator.cpp
eye_mechanism/modules/response/: CMakeLists.txt  response_generator.cpp  response_generator.h
eye_mechanism/modules/speak/: compile  speech.cpp
eye_mechanism/modules/tts/: CMakeLists.txt  speech.cpp  speech.h
eye_mechanism/response_generate/: CMakeLists.txt  main.cpp
